--- a/templates/user.html
+++ b/templates/user.html
@@ -5,6 +5,14 @@
     <title>user page</title>
 </head>
 <body>
+    {% if user %}
     <h1>Hello, {{ name }}</h1>
+    {% else %}
+        <h1>hello Stranger</h1>
+    {% endif %}
+
+    {% include 'common.html' %}
+
+
 </body>
 </html>
