--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>welcome</title>
-</head>
-<body>
-    <h1>Hello world!</h1>
-</body>
-</html>
+{% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
+
+{% block title %} home  {% endblock %}
+
+{% block page_content %}
+
+<div class="page-header">
+
+    <h1>Hello, {% if name %}{{ name }} {% else %} Stranger{% endif %}</h1>
+
+</div>
+
+    <!--<form method="post" action="/">-->
+        <!--{{ form.hidden_tag() }}-->
+        <!--{{ form.name.label }}-->
+        <!--{{ form.name(id='my-text-field', size=20) }}-->
+        <!--{{ form.submit() }}-->
+    <!--</form>-->
+{{ wtf.quick_form(form) }}
+
+<p> 现在本地时间：{{ moment(current_time).format('YYYY-MM-DD hh:MM:ss') }}</p>
+<p> {{ moment(current_time).fromNow(refresh=True) }} </p>
+
+{% endblock %}
