--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,11 @@
 <div class="page-header">
 
     <h1>Hello, {% if name %}{{ name }} {% else %} Stranger{% endif %}</h1>
-
+    {% if not known %}
+    <p>Pleased to meet you!</p>
+    {% else %}
+    <p>Happy to see you again!</p>
+    {% endif %}
 </div>
 
     <!--<form method="post" action="/">-->
